Implementação da etapa 2