@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-      <protobuf.version>3.25.3</protobuf.version>
+      <protobuf.version>4.28.1</protobuf.version>
       <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
     </properties>
 
@@ -46,6 +46,25 @@
           </plugin>
 
           <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.3.0</version>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>add-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>${project.build.directory}/generated-sources/protobuf/java</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
@@ -59,6 +78,26 @@
               <descriptorRefs>
                 <descriptorRef>jar-with-dependencies</descriptorRef>
               </descriptorRefs>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+              <executable>java</executable>
+              <arguments>
+                <argument>--add-opens</argument>
+                <argument>java.base/java.lang=ALL-UNNAMED</argument>
+                <argument>--add-opens</argument>
+                <argument>java.base/java.nio=ALL-UNNAMED</argument>
+                <argument>-XX:+IgnoreUnrecognizedVMOptions</argument>
+                <argument>-Dsun.reflect.noInflation=true</argument>
+                <argument>--disable-preview</argument>
+                <argument>-jar</argument>
+                <argument>target/ProjetoSD2025-1.0-SNAPSHOT-jar-with-dependencies.jar</argument>
+              </arguments>
             </configuration>
           </plugin>
         </plugins>
@@ -100,6 +139,7 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
+            <scope>compile</scope>
           </dependency>
 
 
